language_tests/outputs/invalid/for_await_non_async_iterable.out
error: type 'NotAsyncIterable' does not conform to interface 'AsyncIterable'
 -> language_tests/source_files/invalid/for_await_non_async_iterable.tr:7:4
    for await value in source {
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
        let _ = value
    }
     ^
